--- a/src/mainwindow.ui
+++ b/src/mainwindow.ui
@@ -108,6 +108,9 @@
         </item>
         <item row="1" column="1">
          <widget class="QPushButton" name="btnDoMove">
+          <property name="enabled">
+           <bool>false</bool>
+          </property>
           <property name="text">
            <string>Move</string>
           </property>
