--- a/src/mainwindow.ui
+++ b/src/mainwindow.ui
@@ -83,6 +83,9 @@
           <property name="text">
            <string>/\</string>
           </property>
+          <property name="checked">
+           <bool>true</bool>
+          </property>
          </widget>
         </item>
        </layout>
@@ -90,7 +93,7 @@
       <item>
        <layout class="QGridLayout" name="gridLayout_2">
         <item row="0" column="1">
-         <widget class="QSpinBox" name="spinBox">
+         <widget class="QSpinBox" name="spinBoxSteps">
           <property name="maximum">
            <number>999</number>
           </property>
