--- a/src/mainwindow.ui
+++ b/src/mainwindow.ui
@@ -163,13 +163,16 @@
               <item row="0" column="2">
                <widget class="QSpinBox" name="spinBoxSteps">
                 <property name="minimum">
-                 <number>1</number>
+                 <number>10</number>
                 </property>
                 <property name="maximum">
-                 <number>999</number>
+                 <number>9990</number>
                 </property>
                 <property name="singleStep">
-                 <number>1</number>
+                 <number>10</number>
+                </property>
+                <property name="value">
+                 <number>100</number>
                 </property>
                </widget>
               </item>
@@ -259,8 +262,17 @@ direction</string>
               <property name="enabled">
                <bool>false</bool>
               </property>
+              <property name="minimum">
+               <number>10</number>
+              </property>
               <property name="maximum">
-               <number>999</number>
+               <number>9990</number>
+              </property>
+              <property name="singleStep">
+               <number>10</number>
+              </property>
+              <property name="value">
+               <number>1000</number>
               </property>
              </widget>
             </item>
@@ -312,8 +324,17 @@ direction</string>
               <property name="enabled">
                <bool>false</bool>
               </property>
+              <property name="minimum">
+               <number>10</number>
+              </property>
               <property name="maximum">
-               <number>999</number>
+               <number>9990</number>
+              </property>
+              <property name="singleStep">
+               <number>10</number>
+              </property>
+              <property name="value">
+               <number>1000</number>
               </property>
              </widget>
             </item>
